--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.1.2"
   }
 }
