--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "dev:server": "webpack-dev-server"
+    "start": "webpack-dev-server --open --mode development"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
@@ -18,13 +18,14 @@
     "eslint": "^6.5.1",
     "express": "^4.17.1",
     "prettier": "^1.18.2",
-    "react": "^16.10.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2"
   }
 }
