--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^6.5.1",
     "express": "^4.17.1",
     "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
@@ -27,6 +28,7 @@
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^5.0.0-rc.1"
   }
 }
