--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "react": "^16.10.2",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
